--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -2,7 +2,7 @@ general:
 steps:
   mtaBuild:
     buildTarget: 'CF'
-    dockerImage: 'mtaBuildTool=classic:ppiper/mta-archive-builder'
+    dockerImage: 'ppiper/mta-archive-builder'
     mtaJarLocation: '/opt/sap/mta/lib/mta.jar'
     mtaBuildTool: 'classic'
   cloudFoundryDeploy:
