--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -3,6 +3,7 @@ steps:
   mtaBuild:
     buildTarget: 'CF'
     platform: 'cf'
+    mtaJarLocation: '/opt/mta_archive_builder-1.1.20.jar'
     mtaBuildTool: 'classic'
   cloudFoundryDeploy:
     deployTool: 'mtaDeployPlugin'
