--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -4,6 +4,7 @@ steps:
     buildTarget: 'CF'
     platform: 'cf'
     dockerOptions: '--env HOME=/tmp/mta'
+    mtaJarLocation: '/opt/mta_archive_builder-1.1.20.jar'
     mtaBuildTool: 'classic'
   cloudFoundryDeploy:
     deployTool: 'mtaDeployPlugin'
