--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -9,6 +9,6 @@ steps:
     deployTool: 'mtaDeployPlugin'
     deployType: 'standard'
     cloudFoundry:
-      org: 'P1940751883trial'
+      org: 'P1940751883trial_trial'
       space: 'dev'
       credentialsId: 'CF_CREDENTIALSID'
