--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -9,6 +9,8 @@ steps:
     deployTool: 'mtaDeployPlugin'
     deployType: 'standard'
     verbbose: 'true'
+    loginParameters:
+    CF_DIAL_TIMEOUT: '15'
     cloudFoundry:
       org: 'P1940751883trial_trial'
       space: 'dev'
