--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -2,7 +2,7 @@ general:
 steps:
   cloudFoundryDeploy:
     deployTool: 'cf_native'
-    deployType: 'blue-green'
+    deployType: 'standard'
     verbbose: 'true'
     cloudFoundry:
       org: 'P1940751883trial_trial'
