--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,7 +1,7 @@
 general:
 steps:
   cloudFoundryDeploy:
-    deployTool: 'cf_native'
+    deployTool: 'mtaDeployPlugin'
     deployType: 'standard'
     verbbose: 'true'
     cloudFoundry:
