--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -5,10 +5,11 @@ steps:
     nodeName: Dev
     mtaPath: 'chat_app2.mtar'
     customDescription: Transport from Piper
+    verbose: 'true'
   cloudFoundryDeploy:
     deployTool: 'mtaDeployPlugin'
     deployType: 'standard'
-    verbbose: 'true'
+    verbose: 'true'
     cloudFoundry:
       org: 'P1940751883trial_trial'
       space: 'dev'
