--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,2 +1,12 @@
 general:
 steps:
+  mtaBuild:
+    buildTarget: 'CF'
+    mtaBuildTool: 'mbt'
+  cloudFoundryDeploy:
+    deployTool: 'mtaDeployPlugin'
+    deployType: 'standard'
+    cloudFoundry:
+      org: '47dac577trial'
+      space: 'dev'
+      credentialsId: 'CF-devsecops20'
